--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <!--Шапка-->
     <header>
-      <h1>WebStudio</h1>
       <nav>
+        <a href="WebStudio">Webstudio</a>
         <ul>
           <li><a href="/Студия">Студия</a></li>
           <li><a href="/Портфолио">Портфолио</a></li>
@@ -27,15 +27,18 @@
 
     <main>
       <section>
-        <h2>Эффективные решения для вашего бизнеса</h2>
+        <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </section>
 
       <!--Особенности-->
       <section>
+        <h2>Наши преимущества</h2>
+      </section>
+      <section>
         <ul>
           <li>
-            <h2>Внимание к деталям</h2>
+            <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
@@ -43,7 +46,7 @@
           </li>
 
           <li>
-            <h2>Пунктуальность</h2>
+            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
@@ -51,7 +54,7 @@
           </li>
 
           <li>
-            <h2>Планирование</h2>
+            <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
@@ -59,7 +62,7 @@
           </li>
 
           <li>
-            <h2>Современные технологии</h2>
+            <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -74,20 +77,20 @@
         <ul>
           <li>
             <img
-              src="./images/box1.jpg"
+              src="./images/workingtime.jpg"
               alt="Работа над проектом"
               width="370"
             />
           </li>
           <li>
             <img
-              src="./images/img.jpg"
+              src="./images/appcreating.jpg"
               alt="Разработка приложения"
               width="370"
             />
           </li>
           <li>
-            <img src="./images/img(1).jpg" alt="Палитра цветов" width="370" />
+            <img src="./images/palitra.jpg" alt="Палитра цветов" width="370" />
           </li>
         </ul>
       </section>
@@ -97,26 +100,38 @@
         <h2>Наша Команда</h2>
         <ul>
           <li>
-            <img src="./images/img(2).jpg" alt="Игорь Демченко" width="270" />
-            <h2>Игорь Демченко</h2>
+            <img
+              src="./images/IgorDemchenko.jpg"
+              alt="Игорь Демченко"
+              width="270"
+            />
+            <h3>Игорь Демченко</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
-            <img src="./images/img(3).jpg" alt="Ольга Репина" width="270" />
-            <h2>Ольга Репина</h2>
+            <img src="./images/OlgaRepina.jpg" alt="Ольга Репина" width="270" />
+            <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
-            <img src="./images/img(4).jpg" alt="Николай Тарасов" width="270" />
-            <h2>Николай Тарасов</h2>
+            <img
+              src="./images/NicolaiTarasov.jpg"
+              alt="Николай Тарасов"
+              width="270"
+            />
+            <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
 
           <li>
-            <img src="./images/img(5).jpg" alt="Михаил Ермаков" width="270" />
-            <h2>Михаил Ермаков</h2>
+            <img
+              src="./images/MikhailErmakov.jpg"
+              alt="Михаил Ермаков"
+              width="270"
+            />
+            <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -125,7 +140,7 @@
 
     <!-- Подвал-->
     <footer>
-      <h2>WebStudio</h2>
+      <a href="WebStudio"> WebStudio</a>
       <address>
         <ul>
           <li>
